Fix old terminology

--- a/demo/ome_demo.html
+++ b/demo/ome_demo.html
@@ -111,20 +111,20 @@
                         <button class="btn btn-sm btn-outline-primary ms-auto btnReload" v-on:click="loadSources" v-if="titleStatus == 'OFFLINE'">Reload Player</button>
                     </h4>
                     <p class="card-text">
-                        On this page, you can experience Ultra-low latency with <a href="https://github.com/AirenSoft/OvenMediaEngine" class="text-primary" target="_blank">OvenMediaEngine</a>. Please follow our instructions to taste Ultra-low latency using broadcast tools like OBS.
+                        On this page, you can experience Sub-Second latency with <a href="https://github.com/AirenSoft/OvenMediaEngine" class="text-primary" target="_blank">OvenMediaEngine</a>. Please follow our instructions to taste Sub-Second latency using broadcast tools like OBS.
                         (This server is located in Seoul, Korea. If you connect from abroad, it may be of poor quality.)
                     </p>
                     <form class="">
                         <div class="form-group row mb-0">
                             <label class="col-sm-3 col-form-label">URL</label>
                             <div class="col-sm-9">
-                                <div class="form-control-plaintext">rtmp://demo.ovenplayer.com/app</div>
+                                <div class="form-control-plaintext"><code>rtmp://demo.ovenplayer.com/app</code></div>
                             </div>
                         </div>
                         <div class="form-group row">
                             <label class="col-sm-3 col-form-label">Stream Key</label>
                             <div class="col-sm-9">
-                                <div class="form-control-plaintext">stream</div>
+                                <div class="form-control-plaintext"><code>stream</code></div>
                             </div>
                         </div>
                         <div class="form-group row mb-0">
@@ -160,7 +160,7 @@
 
                     <h4 class="card-title mt-2">What is OME?</h4>
                     <p class="card-text mb-2">
-                        OvenMediaEngine(OME) is a streaming engine for real-time live broadcasting with Ultra-low latency. It receives the RTMP stream from general broadcasting studios such as OBS, XSplit and transmit it on WebRTC. Video streams with Ultra-low latency can be played in a browser without plug-ins.
+                        OvenMediaEngine(OME) is a streaming engine for real-time live broadcasting with Sub-Second latency. It receives the RTMP stream from general broadcasting studios such as OBS, XSplit and transmit it on WebRTC. Video streams with Sub-Second latency can be played in a browser without plug-ins.
                         <a href="https://github.com/AirenSoft/OvenMediaEngine" class="text-primary" target="_blank">More Info</a>
                     </p>
                 </div>
