Add AirenSoft linked in link

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -537,6 +537,10 @@
                         </div>
 
                         <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
+                            <!-- linked in -->
+                            <a class="btn btn-floating m-1" class="" role="button" target="_blank"
+                               href="https://www.linkedin.com/company/airensoft"><i class="fab fa-linkedin-in"></i></a>
+
                             <!-- Facebook -->
                             <a class="btn btn-floating m-1" class="" role="button" target="_blank"
                                href="https://www.facebook.com/airensoft/"><i class="fab fa-facebook-f"></i></a>
