--- a/demo/demo.html
+++ b/demo/demo.html
@@ -123,7 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js/dist/hls.min.js"></script>
 
     <!-- OvenPlayer -->
-    <script src="../dist/ovenplayer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ovenplayer@0.10.21/dist/ovenplayer.js"></script>
 </head>
 
 <body>
