Re-organize links on OvenPlayer demo pages

--- a/demo/demo_input.html
+++ b/demo/demo_input.html
@@ -91,10 +91,10 @@
 
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./demo.html">Player Demo</a>
+                    <a class="nav-link active" href="./demo.html">Test Player</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./ome_demo.html">Sub-Second Latency Demo</a>
+                    <a class="nav-link" href="https://space.ovenplayer.com">Demo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/AirenSoft/OvenPlayer" target="_blank">GitHub</a>
@@ -151,7 +151,7 @@
                     <h5 class="mb-0 fs-6">Stream information</h5>
                     <small class="ms-auto">
                         OvenLiveKit
-                        <span class="badge badge-info align-middle ms-1">1.0.2</span>
+                        <span class="badge badge-info align-middle ms-1">1.0.3</span>
                     </small>
                 </li>
                 <li class="list-group-item">
@@ -344,7 +344,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.0/mdb.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/underscore@1.12.0/underscore-min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/ovenlivekit/dist/OvenLiveKit.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/ovenlivekit@1.0.3/dist/OvenLiveKit.min.js"></script>
 
 <script>
 
