--- a/demo/demo.html
+++ b/demo/demo.html
@@ -138,10 +138,10 @@
 
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="./demo.html">Player Demo</a>
+                        <a class="nav-link active" href="./demo.html">Test Player</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./ome_demo.html">Sub-Second Latency Demo</a>
+                        <a class="nav-link" href="https://space.ovenplayer.com">Demo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/AirenSoft/OvenPlayer" target="_blank">GitHub</a>
